# OtusHomework_3_Allocator

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake.yml
modules/: container.hpp  factorial.hpp  simpleAllocator.h  utils.hpp
